name:                get-cn
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/hrantzsch/get-cn#readme
license:             GPL-3
license-file:        LICENSE
author:              Hannes Rantzsch
maintainer:          hannes.rantzsch@student.hpi.de
copyright:           2016 Hannes Rantzsch
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Article, Site
  build-depends:       base >= 4.7 && < 5, HTTP, tagsoup, utf8-string, regex-posix
  default-language:    Haskell2010
  -- other-extensions:    OverloadedStrings

executable get-cn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , get-cn
  default-language:    Haskell2010

test-suite get-cn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , get-cn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hrantzsch/get-cn
